--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ SELLER="seller"
 PORT=8000
 MONGO_URI="mongodb+srv://luzaMhz:loojah@cluster0.i8dkudl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 JWT_SECRET="shhhhh"
+SALTS = 10
