--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-BUYER="buyer"
-SELLER="seller"
+CLIENT="buyer"
+ADMIN="seller"
 PORT=8000
 MONGO_URI="mongodb+srv://luzaMhz:loojah@cluster0.i8dkudl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 JWT_SECRET="shhhhh"
